fixed footer issue on mobile on contacts page

--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,21 @@ footer{
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
+    top: 100vh;
+    display: flex;
+}
+@media screen and (max-width:1000px){
+    #contact-footer{
+        border-top: 1px solid #888888;
+        width: 100%;
+        padding-top: 5px;
+        margin-top: 5%;
+        margin-left: auto;
+        margin-right: auto;
+        top: 90vh;
+        display: flex;
+        position: fixed;
+    }
 }
 footer p{
     font-weight: 300;
